--- a/src/WhatIsWitCon.css
+++ b/src/WhatIsWitCon.css
@@ -121,7 +121,7 @@
   }
   .swiper {
     max-width: 100%;
-    height: 80%;
+    height: 40%;
   }
   .swiper-slide img {
     max-width: 100%;
